Reorganize for readability

--- a/optee/3.10.0_rpi3_netboot_nfs/Dockerfile
+++ b/optee/3.10.0_rpi3_netboot_nfs/Dockerfile
@@ -1,7 +1,8 @@
+# Contains stock minimam ubuntu rootfs in /arm64-20.04-rootfs.tar.xz
 FROM aistcpsec/tee-distro-dev:rootfs-arm64-ubuntu-20.04-tar as ubuntu-mini
 
 ############################################################################
-# Second build to copy the rootfs tar file
+# Contains optee binaries in ${OPTEE_DIR}
 FROM aistcpsec/tee-dev:optee-3.10.0_rpi3 as optee
 
 USER root
@@ -14,8 +15,13 @@ RUN mkdir -p ${TARGET_DIR}
 ENV ROOTFS_EXT_DIR=${TARGET_DIR}/arm64-20.04-rootfs
 RUN mkdir -p ${ROOTFS_EXT_DIR}
 
+WORKDIR ${TARGET_DIR}
+
 # Copy the Rootfs tar file from the builder
 COPY --from=ubuntu-mini /arm64-20.04-rootfs.tar.xz ${TARGET_DIR}/
+
+# Unzip the tar file to the rootfs extension directory
+RUN tar -xf arm64-20.04-rootfs.tar.xz -C ${ROOTFS_EXT_DIR}
 
 # Copy the contents from the optee rootfs cpio file and copy to target directory
 RUN gunzip -cd ${OPTEE_DIR}/out-br/images/rootfs.cpio.gz | cpio -D ${TARGET_DIR} -idmv \
@@ -24,24 +30,19 @@ RUN gunzip -cd ${OPTEE_DIR}/out-br/images/rootfs.cpio.gz | cpio -D ${TARGET_DIR}
   "etc/init.d/S30optee" \
   "lib/optee_armtz/*"
 
-WORKDIR ${TARGET_DIR}
-
-# Unzip the tar file to the rootfs extension directory
-RUN tar -xf arm64-20.04-rootfs.tar.xz -C ${ROOTFS_EXT_DIR}
-
 # Copy the required binaries into the unzipped folder
-RUN sudo cp etc/init.d/S30optee ${ROOTFS_EXT_DIR}/etc/init.d/ && \
-    sudo cp -r lib/optee_armtz/ ${ROOTFS_EXT_DIR}/lib/ && \
-    sudo cp usr/lib/libteec.so.1.0.0 ${ROOTFS_EXT_DIR}/usr/lib/ && \
-    sudo cp usr/sbin/tee-supplicant ${ROOTFS_EXT_DIR}/usr/sbin/
+RUN cp etc/init.d/S30optee ${ROOTFS_EXT_DIR}/etc/init.d/ && \
+    cp -r lib/optee_armtz/ ${ROOTFS_EXT_DIR}/lib/ && \
+    cp usr/lib/libteec.so.1.0.0 ${ROOTFS_EXT_DIR}/usr/lib/ && \
+    cp usr/sbin/tee-supplicant ${ROOTFS_EXT_DIR}/usr/sbin/
 
 # Copy the tee-supplicant service
-#COPY /mnt/tee-supplicant.service ${ROOTFS_EXT_DIR}/etc/systemd/system/
-#RUN sudo chmod 644 ${ROOTFS_EXT_DIR}/etc/systemd/system/
+COPY tee-supplicant.service ${ROOTFS_EXT_DIR}/etc/systemd/system/
+RUN sudo chmod 644 ${ROOTFS_EXT_DIR}/etc/systemd/system/tee-supplicant.service
 
 # Removed the existing tar file
-RUN sudo rm -rf arm64-20.04-rootfs.tar.xz
+RUN rm -rf arm64-20.04-rootfs.tar.xz
 
 # Create a new tar file and move to root directory
-RUN sudo tar -cJf arm64-20.04-rootfs-optee.tar.xz --exclude="dev,proc,sys" arm64-20.04-rootfs && sudo mv arm64-20.04-rootfs-optee.tar.xz /
+RUN tar -cJf arm64-20.04-rootfs-optee.tar.xz --exclude="dev,proc,sys" arm64-20.04-rootfs && sudo mv arm64-20.04-rootfs-optee.tar.xz /
 
