--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
 variables:
     REPO: aistcpsec/tee-dev
-    NETBOOT_CONT_NME: rootfs-tar-container
     ROOTFS_FILE: arm64-20.04-rootfs-optee.tar.xz
 
 stages:
-    - docker
-    - bootloader
+    - build
+    - rootfs
     - trigger
 
 before_script:
@@ -14,7 +13,7 @@ before_script:
 tee-dev-sgx_2.10:
     tags:
         - fast-shells
-    stage: docker
+    stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:x64-20.04
         - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:sgx-2.10 ./sgx/2.10
@@ -25,7 +24,7 @@ tee-dev-optee_3.9.0:
 #        - todo # skip this ci
     tags:
         - fast-shells
-    stage: docker
+    stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
         - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:optee-3.9.0 ./optee/3.9.0
@@ -34,7 +33,7 @@ tee-dev-optee_3.9.0:
 tee-dev-optee_3.10.0:
     tags:
         - fast-shells
-    stage: docker
+    stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
         - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0 ./optee/3.10.0
@@ -44,7 +43,7 @@ tee-dev-optee_3.10.0:
 tee-dev-optee_3.10.0_rpi3:
     tags:
         - fast-shells
-    stage: docker
+    stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
         - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0_rpi3 ./optee/3.10.0_rpi3
@@ -53,7 +52,7 @@ tee-dev-optee_3.10.0_rpi3:
 tee-dev-optee-3.10.0_rpi3_netboot_bootloader:
     tags:
         - fast-shells
-    stage: bootloader
+    stage: rootfs
     script:
         - docker pull aistcpsec/tee-dev:optee-3.10.0_rpi3
         - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0_rpi3_netboot_bootloader ./optee/3.10.0_rpi3_netboot_bootloader
@@ -62,7 +61,9 @@ tee-dev-optee-3.10.0_rpi3_netboot_bootloader:
 tee-dev-optee-3.10.0_rpi3_netboot_nfs:
     tags:
         - shell117
-    stage: docker
+    stage: rootfs
+    variables:
+        NETBOOT_CONT_NME: rootfs-tar-container
     script:
         - docker pull aistcpsec/tee-distro-dev:rootfs-arm64-ubuntu-20.04-tar
         - docker pull aistcpsec/tee-dev:optee-3.10.0_rpi3
@@ -70,10 +71,8 @@ tee-dev-optee-3.10.0_rpi3_netboot_nfs:
         - docker push ${REPO}:optee-3.10.0_rpi3_netboot_nfs
         - for i in {1..5}; do docker stop $NETBOOT_CONT_NME || true; done 
         - docker rm $NETBOOT_CONT_NME || true
-        - docker run --privileged --cap-add=SYS_CHROOT --name $NETBOOT_CONT_NME -itd -v $(pwd)/optee/3.10.0_rpi3_netboot_nfs:/mnt ${REPO}:optee-3.10.0_rpi3_netboot_nfs /bin/bash -c "/mnt/customize-rootfs.sh"
-          #        - docker exec --privileged $NETBOOT_CONT_NME /bin/bash -c "sudo ldconfig /usr/lib"
-          #        - docker exec --privileged $NETBOOT_CONT_NME /bin/bash -c "sudo systemctl enable tee-supplicant.service"
-#        - docker wait $NETBOOT_CONT_NME
+        - docker run --privileged --cap-add=SYS_CHROOT --name $NETBOOT_CONT_NME -v $(pwd)/optee/3.10.0_rpi3_netboot_nfs:/mnt ${REPO}:optee-3.10.0_rpi3_netboot_nfs /bin/bash -c "/mnt/customize-rootfs.sh > /mnt/net-nfs.log"
+        - cat $(pwd)/optee/3.10.0_rpi3_netboot_nfs/net-nfs.log
         - docker cp $NETBOOT_CONT_NME:/${ROOTFS_FILE} $CI_PROJECT_DIR/${ROOTFS_FILE}
         - for i in {1..5}; do docker stop $NETBOOT_CONT_NME || true; done
         - docker rm $NETBOOT_CONT_NME || true
@@ -86,7 +85,7 @@ tee-dev-optee-3.10.0_rpi3_netboot_nfs:
 tee-dev-keystone_1.0.0:
     tags:
         - fast-shells
-    stage: docker
+    stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:riscv-20.04
         - docker build --build-arg VERSION=v1.0.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:keystone-1.0.0 ./keystone/1.0.0
