--- a/optee/3.9.0/Dockerfile
+++ b/optee/3.9.0/Dockerfile
@@ -24,15 +24,15 @@ ENV PATH=${PATH}:${USER_DIR}/bin
 #RUN echo ${DEBUG_DATE} > date
 
 # For fetching build-optee-repo.git
-ARG CI_JOB_TOKEN
-RUN git config --global user.name gitlab-ci-token
-RUN git config --global http.sslVerify false
-RUN git config --global credential.helper 'store --file ~/.git-credentials'
-RUN echo https://gitlab-ci-token:${CI_JOB_TOKEN}@192.168.100.100:443 >> ~/.git-credentials
-RUN echo https://gitlab-ci-token:${CI_JOB_TOKEN}@192.168.100.100 >> ~/.git-credentials
+#ARG CI_JOB_TOKEN
+#RUN git config --global user.name gitlab-ci-token
+#RUN git config --global http.sslVerify false
+#RUN git config --global credential.helper 'store --file ~/.git-credentials'
+#RUN echo https://gitlab-ci-token:${CI_JOB_TOKEN}@192.168.100.100:443 >> ~/.git-credentials
+#RUN echo https://gitlab-ci-token:${CI_JOB_TOKEN}@192.168.100.100 >> ~/.git-credentials
 
 RUN cat ~/.gitconfig
-RUN cat ~/.git-credentials
+#RUN cat ~/.git-credentials
 
 # Start optee 
 ENV OPTEE_DIR=${USER_DIR}/optee
