--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ tee-dev-optee-3.10.0_rpi3_netboot_nfs:
         - cat $(pwd)/optee/3.10.0_rpi3_netboot_nfs/net-nfs.log
         - docker push ${REPO}:optee-3.10.0_rpi3_netboot_nfs
         - docker cp $NETBOOT_CONT_NME:/${ROOTFS_FILE} $CI_PROJECT_DIR/${ROOTFS_FILE}
-        - cp $(pwd)/optee/3.10.0_rpi3_netboot_nfs:/mnt $CI_PROJECT_DIR/${ROOTFS_FILE}
+        - ls -l && cp $(pwd)/optee/3.10.0_rpi3_netboot_nfs/${ROOTFS_FILE} $CI_PROJECT_DIR/${ROOTFS_FILE}
         - for i in {1..5}; do docker stop $NETBOOT_CONT_NME || true; done
         - docker rm $NETBOOT_CONT_NME || true
     artifacts:
