--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ tee-dev-sgx_2.10:
     stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:x64-20.04
-        - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:sgx-2.10 ./sgx/2.10
+        - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date +%s)
+          --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:sgx-2.10 ./sgx/2.10
         - docker push ${REPO}:sgx-2.10
 
 tee-dev-optee_3.9.0:
@@ -26,7 +27,8 @@ tee-dev-optee_3.9.0:
     stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
-        - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date +%s) --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:optee-3.9.0 ./optee/3.9.0
+        - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date +%s)
+          --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:optee-3.9.0 ./optee/3.9.0
         - docker push ${REPO}:optee-3.9.0
 
 tee-dev-optee_3.10.0:
@@ -54,7 +56,8 @@ tee-dev-optee-3.10.0_rpi3_netboot_bootloader:
     stage: rootfs
     script:
         - docker pull aistcpsec/tee-dev:optee-3.10.0_rpi3
-        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t ${REPO}:optee-3.10.0_rpi3_netboot_bootloader ./optee/3.10.0_rpi3_netboot_bootloader
+        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t
+          ${REPO}:optee-3.10.0_rpi3_netboot_bootloader ./optee/3.10.0_rpi3_netboot_bootloader
         - docker push ${REPO}:optee-3.10.0_rpi3_netboot_bootloader
 
 tee-dev-optee-3.10.0_rpi3_netboot_nfs:
