--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ tee-dev-sgx_2.10:
     script:
         - docker pull aistcpsec/tee-distro-dev:x64-20.04
         - docker build --build-arg VERSION=2.10 --build-arg DEBUG_DATE=$(date +%s)
-          --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:sgx-2.10 ./sgx/2.10
+           --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:sgx-2.10
+           ./sgx/2.10
         - docker push ${REPO}:sgx-2.10
 
 tee-dev-optee_3.9.0:
@@ -28,7 +29,8 @@ tee-dev-optee_3.9.0:
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
         - docker build --build-arg VERSION=3.9.0 --build-arg DEBUG_DATE=$(date +%s)
-          --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:optee-3.9.0 ./optee/3.9.0
+           --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} --rm -t ${REPO}:optee-3.9.0
+           ./optee/3.9.0
         - docker push ${REPO}:optee-3.9.0
 
 tee-dev-optee_3.10.0:
@@ -37,8 +39,8 @@ tee-dev-optee_3.10.0:
     stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
-        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t
-          ${REPO}:optee-3.10.0 ./optee/3.10.0
+        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s)
+           --rm -t ${REPO}:optee-3.10.0 ./optee/3.10.0
         - docker push ${REPO}:optee-3.10.0
 
 
@@ -48,8 +50,8 @@ tee-dev-optee_3.10.0_rpi3:
     stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
-        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t
-          ${REPO}:optee-3.10.0_rpi3 ./optee/3.10.0_rpi3
+        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s)
+           --rm -t ${REPO}:optee-3.10.0_rpi3 ./optee/3.10.0_rpi3
         - docker push ${REPO}:optee-3.10.0_rpi3
 
 tee-dev-optee-3.10.0_rpi3_netboot_bootloader:
@@ -58,8 +60,9 @@ tee-dev-optee-3.10.0_rpi3_netboot_bootloader:
     stage: rootfs
     script:
         - docker pull aistcpsec/tee-dev:optee-3.10.0_rpi3
-        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t
-          ${REPO}:optee-3.10.0_rpi3_netboot_bootloader ./optee/3.10.0_rpi3_netboot_bootloader
+        - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s)
+           --rm -t ${REPO}:optee-3.10.0_rpi3_netboot_bootloader
+           ./optee/3.10.0_rpi3_netboot_bootloader
         - docker push ${REPO}:optee-3.10.0_rpi3_netboot_bootloader
 
 tee-dev-optee-3.10.0_rpi3_netboot_nfs:
@@ -73,7 +76,7 @@ tee-dev-optee-3.10.0_rpi3_netboot_nfs:
         - docker pull aistcpsec/tee-distro-dev:rootfs-arm64-ubuntu-20.04-tar
         - docker pull aistcpsec/tee-dev:optee-3.10.0_rpi3
         - docker build --rm -t ${REPO}:optee-3.10.0_rpi3_netboot_nfs
-           --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN} 
+           --build-arg CI_JOB_TOKEN=${CI_JOB_TOKEN}
            ./optee/3.10.0_rpi3_netboot_nfs
         - for i in {1..5}; do docker stop $NETBOOT_CONT_NME || true; done 
         - docker rm $NETBOOT_CONT_NME || true
@@ -97,8 +100,8 @@ tee-dev-keystone_1.0.0:
     stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:riscv-20.04
-        - docker build --build-arg VERSION=v1.0.0 --build-arg DEBUG_DATE=$(date +%s) --rm -t
-          ${REPO}:keystone-1.0.0 ./keystone/1.0.0
+        - docker build --build-arg VERSION=v1.0.0 --build-arg DEBUG_DATE=$(date +%s)
+           --rm -t ${REPO}:keystone-1.0.0 ./keystone/1.0.0
         - docker push ${REPO}:keystone-1.0.0
 
 trigger_docker-taref-dev:
