Removed the steps to copy the ta-ref,teep-dev and tamproto

--- a/optee/3.10.0_rpi3_netboot_nfs/Dockerfile
+++ b/optee/3.10.0_rpi3_netboot_nfs/Dockerfile
@@ -1,44 +1,19 @@
 # Contains stock minimam ubuntu rootfs in /arm64-20.04-rootfs.tar.xz
 FROM aistcpsec/tee-distro-dev:rootfs-arm64-ubuntu-20.04-tar as ubuntu-mini
 
-# Contains the binary of ta-ref and source of teep-dev
-FROM aistcpsec/teep-dev:optee as taref-teep-dev-source
-
 ############################################################################
 # Contains optee binaries in ${OPTEE_DIR}
 FROM aistcpsec/tee-dev:optee-3.10.0_rpi3 as optee
 
-# Change to build-user to be able to write the tamproto
-USER build-user
-
-# Credential for git clone from 192.168.100.100
-ARG CI_JOB_TOKEN=
-RUN git config --global user.name gitlab-ci-token
-RUN git config --global http.sslVerify false
-RUN git config --global credential.helper 'store --file ~/.git-credentials'
-RUN echo https://gitlab-ci-token:${CI_JOB_TOKEN}@19U2.168.100.100:443 >> ~/.git-credentials
-RUN echo https://gitlab-ci-token:${CI_JOB_TOKEN}@192.168.100.100 >> ~/.git-credentials
+USER root
 
 # Create a target directory to perform the operations
 ENV TARGET_DIR=${USER_DIR}/target
 RUN mkdir -p ${TARGET_DIR}
 
-WORKDIR ${TARGET_DIR}
-
-# Cloning while TARGET_DIR is writeable by build-user
-RUN git clone https://192.168.100.100/rinkai/tamproto.git && \
-    cd tamproto && \
-    git checkout fb1961bc964857384c9ed8696c0d5fc0a76a319d
-
-WORKDIR ${TARGET_DIR}
-
 # Create a rootfs extraction directory to extract and zip it again
 ENV ROOTFS_EXT_DIR=${TARGET_DIR}/arm64-20.04-rootfs
 RUN mkdir -p ${ROOTFS_EXT_DIR}
-
-# Now it is root, everything being written will be root previlage
-# All operation of the rootfs in tar must be done by root previlage
-USER root
 
 WORKDIR ${TARGET_DIR}
 
@@ -68,18 +43,6 @@ RUN sudo chmod 644 ${ROOTFS_EXT_DIR}/etc/systemd/system/tee-supplicant.service
 # Removed the existing tar file
 RUN rm -rf arm64-20.04-rootfs.tar.xz
 
-# Copy ta-ref, teep-device and tamproto into root directory
-RUN mkdir -p ${ROOTFS_EXT_DIR}/root/teep-device && \
-	mkdir -p ${ROOTFS_EXT_DIR}/root/ta-ref && \
-	mkdir -p ${ROOTFS_EXT_DIR}/root/tamproto
-COPY --from=taref-teep-dev-source /home/user/teep-device \
-	${ROOTFS_EXT_DIR}/root/teep-device
-COPY --from=taref-teep-dev-source /home/user/ta-ref \
-	${ROOTFS_EXT_DIR}/root/ta-ref
-
-# Install tamproto to rootfs
-RUN cp -r ${TARGET_DIR}/tamproto ${ROOTFS_EXT_DIR}/root/tamproto
-
 # Create a new tar file and move to root directory
-RUN tar -cJf arm64-20.04-rootfs-optee.tar.xz --exclude="dev,proc,sys" \
-	arm64-20.04-rootfs && sudo mv arm64-20.04-rootfs-optee.tar.xz /
+RUN tar -cJf arm64-20.04-rootfs-optee.tar.xz --exclude="dev,proc,sys" arm64-20.04-rootfs && sudo mv arm64-20.04-rootfs-optee.tar.xz /
+
