--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,14 +45,33 @@ tee-dev-optee_3.10.0:
 
 
 tee-dev-optee_3.10.0_rpi3:
+    variables:
+        OPTEE_CONT_NME: optee-container
+        KERNEL_IMG: kernel8.img
+        KERNAL_TFTP_IMG: kernel-tftp.img
+        DTB_FILE: bcm2710-rpi-3-b-plus.dtb  
     tags:
-        - fast-shells
+        - shell117
     stage: build
     script:
         - docker pull aistcpsec/tee-distro-dev:arm64-20.04
         - docker build --build-arg VERSION=3.10.0 --build-arg DEBUG_DATE=$(date +%s)
            --rm -t ${REPO}:optee-3.10.0_rpi3 ./optee/3.10.0_rpi3
         - docker push ${REPO}:optee-3.10.0_rpi3
+        - for i in {1..5}; do docker stop $OPTEE_CONT_NME || true; done 
+        - docker rm $OPTEE_CONT_NME || true
+        - docker run --privileged --cap-add=SYS_CHROOT --name $OPTEE_CONT_NME
+           -v $(pwd)/optee/3.10.0_rpi3/:/mnt ${REPO}:optee-3.10.0_rpi3 /bin/bash
+           -c "cp /home/user/optee/out-br/target/boot/${KERNEL_IMG} /mnt/${KERNAL_TFTP_IMG} &&
+               cp /home/user/optee/out-br/target/boot/${DTB_FILE} /mnt/" 
+        - for i in {1..5}; do docker stop $OPTEE_CONT_NME || true; done
+        - docker rm $OPTEE_CONT_NME || true
+    artifacts:
+        paths:
+            - optee/3.10.0_rpi3/${KERNAL_TFTP_IMG}
+            - optee/3.10.0_rpi3/${DTB_FILE}
+        expire_in: 1 week
+
 
 tee-dev-optee-3.10.0_rpi3_netboot_bootloader:
     tags:
