--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,13 +62,13 @@ tee-dev-optee_3.10.0_rpi3:
         - docker rm $OPTEE_CONT_NME || true
         - docker run --privileged --cap-add=SYS_CHROOT --name $OPTEE_CONT_NME
            -v $(pwd)/optee/3.10.0_rpi3/:/mnt ${REPO}:optee-3.10.0_rpi3 /bin/bash
-           -c "cp /home/user/optee/out-br/target/boot/${KERNEL_IMG} /mnt/${KERNAL_TFTP_IMG} &&
+           -c "cp /home/user/optee/out-br/target/boot/${KERNEL_IMG} /mnt/ &&
                cp /home/user/optee/out-br/target/boot/${DTB_FILE} /mnt/" 
         - for i in {1..5}; do docker stop $OPTEE_CONT_NME || true; done
         - docker rm $OPTEE_CONT_NME || true
     artifacts:
         paths:
-            - optee/3.10.0_rpi3/${KERNAL_TFTP_IMG}
+            - optee/3.10.0_rpi3/${KERNEL_IMG}
             - optee/3.10.0_rpi3/${DTB_FILE}
         expire_in: 1 week
 
